Add unit tests for the Hash Table implementation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,17 @@ include_directories(../include/)
 # Add Unity Framework
 add_subdirectory(Unity/)
 
-# Tests Targets
-add_executable(ds_slist_tests ds_slist_tests.c ../src/ds_slist.c ../src/memory.c)
-target_link_libraries(ds_slist_tests unity)
+###############################[ Tests Targets ]################################
+
+set(DS_SLIST_TESTS ds_slist_tests)
+set(DS_HASH_TABLE_TESTS ds_hash_table_tests)
+
+# Singly  Linked-List Tests
+add_executable(${DS_SLIST_TESTS} ds_slist_tests.c ../src/ds_slist.c
+               ../src/util_memory.c)
+target_link_libraries(${DS_SLIST_TESTS} unity)
+
+# Hash Table  Tests
+add_executable(${DS_HASH_TABLE_TESTS} ds_hash_table_tests.c
+                ../src/ds_hash_table.c ../src/util_memory.c ../src/ds_slist.c)
+target_link_libraries(${DS_HASH_TABLE_TESTS} unity)
