Test the endianness conversion functions

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(Unity/)
 
 set(DS_SLIST_TESTS ds_slist_tests)
 set(DS_HASH_TABLE_TESTS ds_hash_table_tests)
+set(UTIL_ENDIANNESS_TESTS util_endian)
 
 # Singly  Linked-List Tests
 add_executable(${DS_SLIST_TESTS} ds_slist_tests.c ../src/ds_slist.c
@@ -21,3 +22,7 @@ target_link_libraries(${DS_SLIST_TESTS} unity)
 add_executable(${DS_HASH_TABLE_TESTS} ds_hash_table_tests.c
                 ../src/ds_hash_table.c ../src/util_memory.c ../src/ds_slist.c)
 target_link_libraries(${DS_HASH_TABLE_TESTS} unity)
+
+# Endianness tests
+add_executable(${UTIL_ENDIANNESS_TESTS} util_endian_tests.c ../src/util_endian.c)
+target_link_libraries(${UTIL_ENDIANNESS_TESTS} unity)
