Update the unit tests cmake lists file with the newly added tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,9 @@ set(DS_SLIST_TESTS ds_slist_tests)
 set(DS_HASH_TABLE_TESTS ds_hash_table_tests)
 set(IO_ENDIANNESS_TESTS io_endian_tests)
 set(IO_READ_WRITE_TESTS io_read_write)
+set(DATA_SOFTWARE_TESTS data_software_tests)
+set(DATA_SOFTWARE_SOURCE_TESTS data_software_source_tests)
+set(DATA_SOFTWARE_DATABASE_TESTS data_software_database_tests)
 
 # Singly  Linked-List Tests
 add_executable(${DS_SLIST_TESTS} ds_slist_tests.c ../src/ds_slist.c
@@ -32,3 +35,24 @@ target_link_libraries(${IO_ENDIANNESS_TESTS} unity)
 add_executable(${IO_READ_WRITE_TESTS} io_read_write_tests.c
                                       ../src/io_read_write.c ../src/io_endian.c)
 target_link_libraries(${IO_READ_WRITE_TESTS} unity)
+
+# Software Data Tests
+add_executable(${DATA_SOFTWARE_TESTS}
+    data_software_tests.c ../src/data_software.c ../src/io_read_write.c
+    ../src/io_endian.c ../src/ds_slist.c ../src/util_memory.c)
+target_link_libraries(${DATA_SOFTWARE_TESTS} unity)
+
+# Software Data Source Tests
+add_executable(${DATA_SOFTWARE_SOURCE_TESTS}
+    data_software_source_tests.c ../src/data_software.c
+    ../src/data_software_source.c ../src/io_read_write.c ../src/io_endian.c
+    ../src/ds_slist.c ../src/ds_hash_table.c ../src/util_memory.c)
+target_link_libraries(${DATA_SOFTWARE_SOURCE_TESTS} unity)
+
+# Software Database Tests
+add_executable(${DATA_SOFTWARE_DATABASE_TESTS}
+    data_software_database_tests.c ../src/data_software.c
+    ../src/data_software_database.c ../src/data_software_source.c
+    ../src/io_read_write.c ../src/io_endian.c ../src/ds_slist.c
+    ../src/ds_hash_table.c ../src/util_memory.c)
+target_link_libraries(${DATA_SOFTWARE_DATABASE_TESTS} unity)
